# cg_lab

./: README.md
10_polygon/: CMakeLists.txt  main.cpp
10_polygon_clipping/: compile  polygon.cpp
11_scan_fill/: CMakeLists.txt  main.cpp
12_car_design/: CMakeLists.txt  main.cpp
13_cube_spin/: CMakeLists.txt  main.cpp
14_limacon/: CMakeLists.txt  main.cpp
15_bezier_curve/: CMakeLists.txt  main.cpp
1_bresenham_line/: CMakeLists.txt  README.md  bresenham_line.cpp  compile  main.cpp
2_bresenham_circle/: CMakeLists.txt  README.md  bresenham_circle.cpp  compile  main.cpp
3_cylinder/: CMakeLists.txt  main.cpp
4_gasket/: CMakeLists.txt  main.cpp
5_rotate_house/: CMakeLists.txt  main.cpp
6_house_reflect/: CMakeLists.txt  main.cpp  program.cpp
7_square/: CMakeLists.txt  main.cpp
8_cohen/: CMakeLists.txt  main.cpp
9_liang/: CMakeLists.txt  main.cpp
